masofaviy talim bot

--- a/.env_example
+++ b/.env_example
@@ -1,12 +1,10 @@
-# YANGI .env FAYL YARATING VA
-# QUYIDAGI MA'LUMOTLARNI YOZING:
+ADMINS=12345678915
+BOT_TOKEN=12345678915123456789151234567891512345678915
+BOT=bot_bot
 
-ADMINS=12345678,12345677,12345676
-BOT_TOKEN=123452345243:ABshDlsFIjklL
+API_BASE_URL = http://127.0.0.1:8000//api
 
 
-# PostgreSQL
-DB_USER=postgres
-DB_PASS=1234567
-DB_NAME=telegram_bot
-DB_HOST=localhost
+API_ID = 1234567
+API_HASH = 12345671234567123456712345671234567
+SESSION_NAME = session_file
